samples/_failures_safe/1761002108_9a3c6f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12e1763d.c: In function ‘main’:
./samples/SAFE/__tmp_12e1763d.c:142:16: error: expected ‘;’ at end of input
  142 |     buffer_free
      |                ^
      |                ;
./samples/SAFE/__tmp_12e1763d.c:142:5: error: expected declaration or statement at end of input
  142 |     buffer_free
      |     ^~~~~~~~~~~
